--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
+    <string name="password_reset_success_message">Se ha enviado un correo electrónico para restablecer la contraseña</string>
+    <string name="password_reset_failed_message">La recuperación de contraseña falló</string>
+
 </resources>
